clusters/k01tw/platform/services/istio-gateway/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: workload-ingress
  namespace: istio-ingress
spec:
  selector:
    app: istio-ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - "*.k01tw.int.garys-lab.io"
      tls:
        mode: SIMPLE
        credentialName: k01tw-wildcard-tls
